# copyconten

./: .gitignore  Dockerfile  example.env  main.py  pyproject.toml  requirements.txt
core/: __init__.py  bot.py  config.py  missav.py
plugins/: debug.py  nsfw.py  stealit.py
utils/: __init__.py  formater.py  message_types.py  progress.py  tools.py  video_tools.py
