[project]
name = "savecontent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "aiopath>=0.7.7",
    "aiorun>=2025.1.1",
    "meval>=2.5",
    "pyrotgfork>=2.2.9",
    "python-dotenv>=1.1.0",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
]
